--- a/case_study_1.ipynb
+++ b/case_study_1.ipynb
@@ -183,13 +183,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Metric can be the number of trips completed between Gotham & Metropolis (origin in Gotham & destination in Metropolis or vice-versa) per driver in both of those cities\n",
-    "* Or alternaely, number of driver cancellations for trips between Gotham & Metropolis (origin in Gotham & destination in Metropolis or vice-versa) per driver in both of those cities\n",
+    "* Metric can be the difference in number of trips completed between Gotham & Metropolis (origin in Gotham & destination in Metropolis or vice-versa) per driver before and after the experiment\n",
     "* Pick a random sample of drivers from both cities and subject them to the experiement \n",
-    "* Keep track of these metrics for these drivers after rolling out the experiment and see if there is any change in metrics\n",
-    "* Conduct hypothesis testing to validate statistical significance (set significance level) of the difference in mean of the metrics\n",
+    "* Measure the number of trips completed between these cities per driver after rolling out the experiment\n",
+    "* Conduct hypothesis testing to validate statistical significance (set significance level) of the metrics (difference in trips completed per driver between these cities)\n",
     "* Can use bootstrap method or bayesian inference to do the hypothesis testing \n",
-    "* If there was statistically signifcant difference in the metrics in a positive way, then we can analyze further to see the cost/benefit and decide whether to roll out to all drivers in the city "
+    "* If the metrics is statistically signifcant in a positive way, then we can analyze further to see the cost/benefit and decide whether to roll out to all drivers in the city "
    ]
   },
   {
@@ -1919,7 +1918,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* We pick RandonForest as the final model, as the accuracy is almost the same among all 3 models we checked and RandomForest is the fastest (sclaes well) and it has more hyper parameters for us to tune to get a better performance. "
+    "* We pick RandomForest as the final model, as the accuracy is almost the same among all 3 models we checked and RandomForest is the fastest (sclaes well) and it has more hyper parameters for us to tune to get a better performance. "
    ]
   },
   {
